--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokémon 2048</title>
+    <title>2048</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Pokémon 2048</h1>
+    <h1>2048</h1>
     <div class="score-container">
         <div class="score">Score: <span id="score">0</span></div>
         <div class="high-score">High Score: <span id="highscore">0</span></div>
